# termplotlib

./: .gitignore  LICENSE.txt  Makefile  README.md  codecov.yml  justfile  setup.cfg  setup.py  test_requirements.txt  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
asciihist/: __init__.py  main.py
asciiplotlib/: __about__.py  __init__.py  barh.py  figure.py  helpers.py  hist.py  plot.py  subplot.py  table.py
src/termplotlib/: __init__.py  barh.py  figure.py  helpers.py  hist.py  plot.py  subplot.py
termiplot/: __about__.py  hist.py
termplotlib/: __about__.py  barh.py  figure.py  helpers.py  hist.py  plot.py  subplot.py
test/: test_asciihist.py  test_asciiplotlib.py  test_barh.py  test_figure.py  test_hist.py  test_plot.py  test_subplot.py  test_table.py
tests/: test_barh.py  test_hist.py  test_plot.py  test_scatter.py  test_subplot.py
