[metadata]
name = termplotlib
version = 0.3.2
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Plotting on the command line
url = https://github.com/nschloe/termplotlib
project_urls =
    Code=https://github.com/nschloe/termplotlib
    Issues=https://github.com/nschloe/termplotlib/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_file = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Shells
    Topic :: Multimedia :: Graphics
keywords =
    graphics
    plotting
    terminal
    ascii
    matplotlib

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel
