[metadata]
name = termplotlib
version = 0.3.9
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Python plotting for the command line
url = https://github.com/nschloe/termplotlib
project_urls =
    Code=https://github.com/nschloe/termplotlib
    Issues=https://github.com/nschloe/termplotlib/issues
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Shells
    Topic :: Multimedia :: Graphics
keywords =
    graphics
    plotting
    terminal
    ascii
    matplotlib

[options]
package_dir =
    =src
packages = find:
install_requires =
    numpy >= 1.20
python_requires = >=3.7

[options.packages.find]
where=src
